--- a/prueba3.html
+++ b/prueba3.html
@@ -1,4 +1,5 @@
 <body>
   <p id="p1">Holo a todos</p>
-  <input type="button" value="cambiar">
+  <input type="button" value="cambiar" onclick="cambiarP()">
 </body>
+<script src="prueba3.js"></script>
